--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -82,6 +82,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     text-shadow: 1px 1px 1px white;
     border: 1px thin;
     border-radius: 2px;
+    height: 13%;
     border-color: transparent;
     background-color: white;
 }
@@ -115,11 +116,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
 #showContent {
     width: auto;
     /* max-width: 600px; 
-  margin: 0 auto;  */
-    margin-top:10%;
+  margin: 0 auto; */
+    margin-top:7%;  
     padding-left: 25%;
-    max-width: 60%;
-    min-width: 30%;
+    width: 60%;
     z-index: 400;
     
     /* unneeded due to outfading margin-bottom: 5%; */
@@ -300,7 +300,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     left: 17%;
     padding-top: 20%;
     position: fixed;
-    height: 30%;
+    height: 35%;
 }
 
 #impressumButton {
@@ -310,6 +310,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     border-bottom-style:solid;
     border-left-style: none;
     bottom: 2.9%;
+    background-color: white;
+    z-index: 997;
+    position: fixed;
+    padding-left: 45%;
+    width: 100%;
+}
+
+#menuButton {
+    border-width: thin;
+    border-top-style: solid;
+    border-right-style: none;
+    border-bottom-style:solid;
+    border-left-style: none;
+    top: 15%;
     background-color: white;
     z-index: 997;
     position: fixed;
