--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -76,7 +76,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
        border-width: medium;
     border-top-style: none;
     border-right-style: none;
-    border-bottom-style: groove;
+    border-bottom-style:dotted;
     border-left-style: none;
     border-color: blue;
 }
@@ -180,13 +180,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     height: 70%;
     top: 17%;
     max-width: 22%;
-    min-width: 14%;
+    min-width: 22%;
     border: 1px thin;
     border-radius: 5px;
 }
 #top {
     position:absolute;
-    bottom: 2%;
+    bottom: .7%;
     margin-left: 20%;
     float: bottom;
     max-height: 17%;
@@ -241,7 +241,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     position: relative;
     /* padding: 5px 50px; */
     padding-bottom: 15px;
-    padding-top: 5px;
+    padding-top: 15px;
     padding-left: 2px;
     cursor: pointer;
     z-index: 555;
@@ -305,7 +305,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     float: right;
     width:auto;
     top: 17%;
-    left: 17%;
+    left: 22%;
     padding-top: 20%;
     position: fixed;
     height: 43%;
@@ -578,36 +578,28 @@ hr {
 */
 
 .langbtn {
- display: inline;
     float: left;
-    padding: 20px;
-width: auto;
+    padding-left: 20px;
+    margin-top: .5%;
 }
 
 .btn {
     display: inline-block;
-    padding: .6em .7em;
     margin-left: 2em;
-    border-radius: .6em;
+    padding-bottom: 10px;
     text-align: center;
-    border: 1px solid transparent;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
     font-size: .7em;
-    text-decoration: none;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
 }
 .btn:hover {
-    background: rgb(206, 24, 24);
-    background: -moz-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(39%, rgba(206, 24, 24, 1)), color-stop(73%, rgba(188, 143, 39, 1)));
-    background: -webkit-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
-    background: -o-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
-    background: -ms-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
-    background: linear-gradient(135deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ce1818', endColorstr='#bc8f27', GradientType=1);
-    color: #f3fa32;
+    color: #FFBF00;
+    border-width: thin;
+    border-top-style: none;
+    border-right-style: none;
+    border-bottom-style: solid;
+    border-left-style: none;
     border-color: red;
 }
 .btn .icon {
@@ -622,8 +614,8 @@ width: auto;
 */
 
 .btn a:hover {} a {
-    color: red;
-    text-shadow: 0 0 5px rgba(104, 90, 255, 0.5);
+    color: #298A08;
+    text-decoration: none;
 }
 a:hover {
     color: #202699;
