--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -82,13 +82,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
 }
 #menu {
     width: 100%;
-    z-index: 998;
+    z-index: 995;
     padding-left: 1px;
     position: fixed;
+    top: 0px;
     padding-right: 1px;
-    top: 8px;
     padding-bottom: 2px;
-    text-shadow: 1px 1px 1px white;
+    text-shadow: 1px 1px 1px blue;
     height: 13%;
     background-color: white;
 }
@@ -124,8 +124,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     /* max-width: 600px; 
   margin: 0 auto; */
     margin-top:7%;  
-    padding-left: 25%;
-    width: 60%;
+    padding-left: 23%;
     z-index: 400;
     
     /* unneeded due to outfading margin-bottom: 5%; */
@@ -211,7 +210,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     color: #FDEEF4;
 }
 #toc ul li:before {
-    content: "&gt;";
+    content: ">";
     color: #FF8040;
 }
 .submenu li {
@@ -304,11 +303,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     border-left-style: solid;
     float: right;
     width:auto;
-    top: 17%;
+    top: 15%;
     left: 22%;
     padding-top: 20%;
     position: fixed;
-    height: 43%;
+    height: 44%;
 }
 
 #tocButton:hover {
@@ -343,9 +342,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     border-right-style: none;
     border-bottom-style:solid;
     border-left-style: none;
-    top: 15%;
+    top: 13%;
     background-color: white;
-    z-index: 997;
+    z-index: 996;
     position: fixed;
     padding-left: 45%;
     width: 100%;
@@ -359,12 +358,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     content: none;
     /*line-height: 16px; */
 }
-.dropdowncontainer:hover &gt; .submenu li:before {
+.dropdowncontainer:hover > .submenu li:before {
     opacity: 1;
     content: none;
 }
 #aboutImg {
-    filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale");
+     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     /* Firefox 10+, Firefox on Android */
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
@@ -533,7 +532,7 @@ ul li {
     list-style: none;
 }
 ul li:before {
-    content: "=&gt;";
+    content: "->";
     font-family: "Lucida Grande", "New Century Schoolbook", "Times";
     font-size: 1.4;
     color: #black;
