--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -1,11 +1,10 @@
-/* Color variables */
+
 @darkblue: #E6EDF4;
 @blue: #3E4C57;
 @lightblue: #E6EDF4;
 @alternative: #DBB69D;
 @active: #BE8E80;
 
-/* Fonts */
 @font-face {
   font-family: 'Abel';
   font-style: normal;
@@ -25,12 +24,25 @@ body {
     padding: 0;
     color: @blue;
     background-color: @lightblue;
-    font: 15em;
+    font-size: 16px;
     line-height: 1.5;
     font-family: "Abel", "Lucida Grande", "New Century Schoolbook", "Times";
     font-weight: 400;
+    
 }
-
+a {
+    display: inline-block;
+    color: @active;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-spacing: .5px .1px;
+     border-bottom: 2px dashed @active;
+}
+a:hover {
+    border-bottom: 2px solid @active;
+    padding-bottom: 1px;
+}
+    
 #news {
     -moz-box-shadow: 0 0 5px 5px black;
     -webkit-box-shadow: 0 0 5px 5px black;
@@ -69,9 +81,11 @@ body {
     border-color: transparent;
     border-radius: 20px;
     width: 100%;
+    z-index: 997;
     text-align: center;
     padding-left: 1%;
     padding-right: 1%;
+    
 }
 
 #impressum a {
@@ -79,26 +93,130 @@ body {
 }
 
 .current_page_item {
-    color: blue;
-    border-width: medium;
-    border-top-style: none;
-    border-right-style: none;
-    border-bottom-style:dotted;
-    border-left-style: none;
+    font-color: red;
+    background: yellow;
     border-color: blue;
 }
-#menu {
+
+header {
     width: 100%;
-    z-index: 898;
-    padding-left: 1px;
-    position: fixed;
-    top: 0px;
-    padding-right: 1px;
-    padding-bottom: 2px;
-    text-shadow: 1px 1px 1px blue;
-    height: 13%;
-    background-color: #E6EDF4;
+    height: 100px;
+    position:fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    background: @lightblue;
+    
+    
+        
+        
+        h1 {
+            font-size: 2em;
+            line-height: 2.5;
+            font-weight: bold;
+            margin-left: 5px;
+            font-family: "Shadows Into Light", "Lucida Grande", "New Century Schoolbook", "Times";
+            color: #EEC169;
+            text-shadow: 2px 1px 1px #FB0C05;
+            letter-spacing: -1px;
+            -webkit-font-smoothing: antialiased;
+        }
 }
+
+    
+#menu {
+    height: 70px;
+    width: 100%;
+    display: inline-block;
+    .logo {
+        .lefty; 
+        top: 2px;
+        padding-left: 1%;
+        width: 28%;
+    }
+    nav {
+        width:70%;
+        .righty;
+        ul {
+            list-style: none;
+            display: table;
+            margin: 0;
+            height: 100%;
+            li {
+                display:table-cell;
+                float: left;
+                height: 100%;
+                margin-left: 10px;
+                vertical-align: middle;
+                a, span {
+                        display: inline;
+                        padding: 8px 12px;
+                        
+                        color: @active;
+                        text-shadow: none;
+                        height: 100%;
+                        color: @active;
+                        text-decoration: none;
+                        padding-bottom: 1px;
+                        border-spacing: .5px .1px;
+                        border-bottom: 2px dotted @active;
+                }
+                a:hover, span:hover {
+                        border-bottom: 2px dashed @active;
+                }
+                
+            }
+        }
+        
+        #mainnav {
+         float: left;
+        height: 70px;
+            margin-top: 5%;
+            .dropdowncontainer {
+                position: relative;
+                cursor: pointer;
+                z-index: 1000;
+            }
+            .dropdowncontainer:hover > .submenu {
+                display: inline-block!important;
+            }
+            .submenu:hover > .submenu {
+                display: inline-block !important;
+            }
+
+        }
+
+        #language {
+            float: right;
+            clear: both;
+        }
+                #refresh {
+            float: right;
+            clear: both;
+        }
+    }
+    
+}
+
+.subnav {
+    float:right;
+    height: 100%;
+    border: thin black;
+    li {
+       height: 100%; 
+        margin-top: 0%;
+        a {
+                margin-top: 0%;
+          height: 100%;   
+        }
+    }
+}
+
+body.active #menu {
+    top: -13%;
+    transition: top 0.5s;
+}
+
 .gallerytable {
     padding: 0;
     margin: 0;
@@ -128,13 +246,11 @@ body {
 }
 #showContent {
     width: auto;
-    /* max-width: 600px; 
-  margin: 0 auto; */
-    margin-top:7%;  
+    border-radius: 1em;
+    margin-top:100px;  
     padding-left: 23%;
     z-index: 400;
-    
-    /* unneeded due to outfading margin-bottom: 5%; */
+    background: @lightblue;
 }
 .projectpic {
     width: 50%;
@@ -147,27 +263,39 @@ body {
     max-width: 100%;
 }
 .submenu {
-    padding: 0;
     position: absolute;
-    top: 30px;
+    padding: 0;
+    top: 20px;
     left: 1px;
-    right: 1%;
-    z-index: 999;
+    z-index: 998;
+    height: auto;
     padding-left: 20px;
     margin-left: 30px;
     margin-bottom: 1%;
-    width: auto;
+    width: 35em;
+    list-style: none;
+    
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
     display: none !important;
-    opacity: 0 !important;
-    visibility: hidden !important;
-    border: 1px thin;
-    border-radius: 30px;
-    border-color: transparent;
+
+    background-color: @lightblue;
         
 }
+
+.submenu > li {
+float: left;
+        display: inline;
+    padding-top: 4px;
+    /* background-color: @lightblue; */
+        
+}
+.submenu li a {
+    margin-top: 4px;
+    margin-left: 25%;
+}
+
 #onTopImg:hover {
     animation: bounceit 3s infinite linear;
     -webkit-animation: bounceit 3s infinite linear;
@@ -179,7 +307,8 @@ body {
     float: left;
     min-height: 20%;
     height: 80%;
-    top: 17%;
+    top: 12%;
+    padding-top: 1%;
     max-width: 22%;
     min-width: 22%;
     border: 1px thin;
@@ -200,12 +329,11 @@ body {
     max-height: 85%;
     overflow-y: auto;
     overflow-x: auto;
+    background-color: @lightblue;
 }
 #toc ul li a {
-    color: #F87217;
     width: auto;
     max-width: 10%;
-    font: 15em;
     line-height: 1.5;
 }
 #toc ul li a:hover {
@@ -215,15 +343,7 @@ body {
     content: ">";
     color: #FF8040;
 }
-.submenu li {
-    display: block;
-    padding-top: 4px;
-    text-shadow: 0 -1px 0 #000;
-}
-.submenu li a {
-    margin-top: 4px;
-    margin-left: 25%;
-}
+
 
 .righty {
  float: right;
@@ -237,26 +357,7 @@ body {
     display:block; margin-right:1%; margin-left:1%; min-width: 95%; max-width: 99%;
 }
 
-.dropdowncontainer {
-    display: inline-block;
-    position: relative;
-    /* padding: 5px 50px; */
-    padding-bottom: 15px;
-    padding-top: 15px;
-    padding-left: 2px;
-    cursor: pointer;
-    z-index: 1000;
-}
-.dropdowncontainer:hover > .submenu {
-    display: block !important;
-    opacity: 1 !important;
-    visibility: visible !important;
-}
-.submenu:hover > .submenu {
-    display: block !important;
-    opacity: 1 !important;
-    visibility: visible!important;
-}
+
 @keyframes bounceit {
     0% {
         transform: scale(1);
@@ -293,7 +394,6 @@ body {
 }
 .dropdowncontainer:before {
     content: none;
-    /*line-height: 16px; */
 }
 #tocButton {
     cursor: pointer;
@@ -305,11 +405,11 @@ body {
     border-left-style: solid;
     float: right;
     width:auto;
-    top: 15%;
     left: 22%;
-    padding-top: 20%;
+    z-index: 995;
+    padding-top: 25%;
     position: fixed;
-    height: 44%;
+    height: 60%;
     background-color: #DBB69D;
 }
 
@@ -325,7 +425,7 @@ body {
     border-right-style: none;
     border-bottom-style:solid;
     border-left-style: none;
-    bottom: 2.9%;
+    bottom: 2.5%;
     background-color: white;
     z-index: 997;
     position: fixed;
@@ -339,42 +439,49 @@ body {
  } 
 
 #menuButton {
-    cursor: pointer;
-    font-size: 0.5em;
-    border-width: thin;
-    border-top-style: solid;
-    border-right-style: none;
-    border-bottom-style:solid;
-    border-left-style: none;
-    top: 13%;
-    background-color: white;
-    z-index: 899;
-    position: fixed;
-    padding-left: 45%;
+    cursor: n-resize;
+    border-top: 4px solid @alternative;
+    z-index: 500;
     width: 100%;
-    background-color: #DBB69D;
+    text-align: center;
+    background-color: transparent;
+    margin-bottom: 20px;
+
+    height: 2px;
+   background: @alternative;
+    
+    div {
+        display: inline-block;   
+        height: 25px;
+        text-align: center;
+        width: 30px;
+        z-index: 899;
+            margin-left: auto;
+    margin-right: auto;
+            border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        background: @alternative;
+
+        
+    }
 }
 
-#menuButton:hover {
-    background-color: red;
- } 
 
 .dropdowncontainer li:before {
     content: none;
-    /*line-height: 16px; */
 }
 .dropdowncontainer:hover > .submenu li:before {
     opacity: 1;
     content: none;
 }
 #aboutImg {
-     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
-    /* Firefox 10+, Firefox on Android */
+     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     filter: grayscale(100%);
-    /* IE 6-9 */
     z-index: 444;
     width: 133px;
     float: right;
@@ -434,47 +541,18 @@ body {
 li {
     line-height: 1.4;
 }
-/* Header, &lt;header&gt;
-   header   - container
-   h1       - project name
-   h2       - project description
-*/
+
 
 .anchor {
     top: -90px;
     display: inline;
     position: relative;
 }
-header {
-    width: 100%;
-    padding: 20px 0;
-    margin: 0 0 40px 0;
-}
-header h1 {
-    font-size: 2em;
-    line-height: 1.5;
-    /* margin: 0 0 0 -40px; */
-    font-weight: bold;
-    margin-left: 5px;
-    font-family: "Shadows Into Light", "Lucida Grande", "New Century Schoolbook", "Times";
-    color: #EEC169;
-    text-shadow: 2px 1px 1px #FB0C05;
-    /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1); */
-    letter-spacing: -1px;
-    -webkit-font-smoothing: antialiased;
-}
-header h2 {
-    font-size: 16em;
-    font-weight: 300;
-    color: #666;
-}
-#downloads .btn {
-    display: inline-block;
-    text-align: center;
-    margin: 0;
-}
-/* Main Content
-*/
+
+
+    
+    
+    
 
 #menuul {
     display: inline;
@@ -536,15 +614,17 @@ dt {
 ul li {
     list-style: none;
 }
-ul li:before {
+body > *:not(header) ul li:before {
     content: "->";
-    font-size: 1.4;
-    color: #black;
+    font-size: 1.4; 
+    color: @alternative;
     padding-top: 20px;
     margin-left: -37px;
     margin-right: 16px;
     line-height: 1.4;
 }
+
+
 .arrowStyle {
     font-size: 13px;
     color: #b5e853;
@@ -576,8 +656,7 @@ hr {
     border-bottom: 1px dashed #b5e853;
     color: #b5e853;
 }
-/* Buttons
-*/
+
 
 .langbtn {
     float: left;
@@ -585,49 +664,11 @@ hr {
     margin-top: .5%;
 }
 
-.btn {
-    display: inline-block;
-    margin-left: 2em;
-    padding-bottom: 10px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.1em;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-}
-.btn:hover {
-    color: #FFBF00;
-    border-width: thin;
-    border-top-style: none;
-    border-right-style: none;
-    border-bottom-style: solid;
-    border-left-style: none;
-    border-color: red;
-}
-.btn .icon {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin: 1px 8px 0 0;
-    float: left;
-}
-/* Links
-   a, a:hover, a:visited
-*/
-
-.btn a:hover {} a {
-    color: #BE8E80;
-    text-decoration: none;
-}
-a:hover {
-    color: #202699;
-    text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
-}
-/* Clearfix */
-
 .cf:before,
 .cf:after {
     content: "";
     display: table;
+    height: 0 !important;
 }
 .cf:after {
     clear: both;
@@ -642,8 +683,6 @@ a.tooltip:after {
     left: 25%;
     opacity: 0;
     content: attr(data-tool);
-    /* might also use attr(title) */
-    /* min-width: 100px; */
     max-width: 100%;
     padding: 5px 8px;
     z-index: 999;
@@ -660,3 +699,6 @@ a.tooltip:hover:after {
     visibility: visible;
     opacity: 1;
 }
+
+
+@media screen and (max-width:1024px) { body { font-size:14px; }}
