--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -4,6 +4,7 @@
 @lightblue: #E6EDF4;
 @alternative: #DBB69D;
 @active: #BE8E80;
+@menuheight: 70px;
 
 @font-face {
   font-family: 'Abel';
@@ -74,12 +75,8 @@ a:hover {
 }
 
 #impressum {
-    bottom: 0.1px; position: fixed; background-color: white;
-    border: 1px thin;
-    border-radius: 2px;
+    bottom: 0.1px; position: fixed; background-color: @lightblue;
     font-size: .8em;
-    border-color: transparent;
-    border-radius: 20px;
     width: 100%;
     z-index: 997;
     text-align: center;
@@ -125,12 +122,13 @@ header {
 
     
 #menu {
-    height: 70px;
+    height: @menuheight;
     width: 100%;
     display: inline-block;
+    z-index: 995;
     .logo {
         .lefty; 
-        top: 2px;
+        top: 0%;
         padding-left: 1%;
         width: 28%;
     }
@@ -267,7 +265,7 @@ body.active #menu {
     padding: 0;
     top: 20px;
     left: 1px;
-    z-index: 998;
+    z-index: 999;
     height: auto;
     padding-left: 20px;
     margin-left: 30px;
@@ -311,7 +309,7 @@ float: left;
     padding-top: 1%;
     max-width: 22%;
     min-width: 22%;
-    border: 1px thin;
+    z-index: 911;
     border-radius: 5px;
 }
 #top {
@@ -323,6 +321,7 @@ float: left;
     overflow: hidden;
 }
 #toc {
+    z-index: 911;
     margin-left: 3%;
     padding-right: 3%;
     height: auto;
@@ -398,50 +397,69 @@ float: left;
 #tocButton {
     cursor: pointer;
     font-size: 0.5em;
-    border-width: thin;
-    border-top-style: dotted;
-    border-right-style: solid;
-    border-bottom-style: none;
-    border-left-style: solid;
     float: right;
-    width:auto;
+    width:10px;
     left: 22%;
-    z-index: 995;
+    top: 78px;
+    z-index: 890;
     padding-top: 25%;
     position: fixed;
-    height: 60%;
-    background-color: #DBB69D;
+    height: 33%;
+    background: @alternative;
+
+        div {
+        display: inline-block;   
+        height: 25px;
+        text-align: center;
+        width: 30px;
+        z-index: 899;
+        margin-top: auto;
+        margin-bottom: auto;
+         padding-top: 50%;  
+            border-top-left-radius: 0px;
+        border-top-right-radius: 5px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 5px;
+        background: @alternative;
+
+        
+    }
 }
-
-#tocButton:hover {
-    background-color: red;
- }   
-
 #impressumButton {
     cursor: pointer;
     font-size: 0.5em;
-    border-width: thin;
-    border-top-style: solid;
-    border-right-style: none;
-    border-bottom-style:solid;
-    border-left-style: none;
     bottom: 2.5%;
-    background-color: white;
+    height: 5px;
     z-index: 997;
     position: fixed;
     padding-left: 45%;
     width: 100%;
     background-color: #DBB69D;
+        div {
+        display: inline-block;   
+        height: 25px;
+        text-align: center;
+        width: 30px;
+            vertical-align:top;
+        z-index: 899;
+            margin-left: auto;
+    margin-right: auto;
+            border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        background: @alternative;
+
+        
+    }
 }
 
-#impressumButton:hover {
-    background-color: red;
- } 
+
 
 #menuButton {
     cursor: n-resize;
     border-top: 4px solid @alternative;
-    z-index: 500;
+    z-index: -1;
     width: 100%;
     text-align: center;
     background-color: transparent;
@@ -451,11 +469,12 @@ float: left;
    background: @alternative;
     
     div {
-        display: inline-block;   
+        display: fixed;   
         height: 25px;
         text-align: center;
         width: 30px;
         z-index: 899;
+        bottom: 22px;
             margin-left: auto;
     margin-right: auto;
             border-top-left-radius: 0px;
