--- a/stylesheets/seriousFlat.css
+++ b/stylesheets/seriousFlat.css
@@ -261,7 +261,7 @@ body.active #menu {
   position: fixed;
   float: left;
   min-height: 20%;
-  height: 80%;
+  height: 85%;
   top: 12%;
   padding-top: 1%;
   max-width: 22%;
@@ -354,23 +354,26 @@ body.active #menu {
   font-size: 0.5em;
   float: right;
   width: 10px;
+  vertical-align: middle;
   left: 22%;
   top: 78px;
   z-index: 890;
-  padding-top: 25%;
   position: fixed;
-  height: 33%;
+  height: 100%;
   background: #dbb69d;
+  padding-top: 19%;
 }
 #tocButton div {
   display: inline-block;
+  position: fixed;
   height: 25px;
   text-align: center;
+  vertical-align: middle;
   width: 30px;
   z-index: 899;
   margin-top: auto;
   margin-bottom: auto;
-  padding-top: 50%;
+  padding-top: 11px;
   border-top-left-radius: 0px;
   border-top-right-radius: 5px;
   border-bottom-left-radius: 0px;
@@ -380,8 +383,9 @@ body.active #menu {
 #impressumButton {
   cursor: pointer;
   font-size: 0.5em;
-  bottom: 2.5%;
+  bottom: 3%;
   height: 5px;
+  text-align: center;
   z-index: 997;
   position: fixed;
   padding-left: 45%;
@@ -389,18 +393,19 @@ body.active #menu {
   background-color: #DBB69D;
 }
 #impressumButton div {
-  display: inline-block;
+  position: inherit;
   height: 25px;
   text-align: center;
+  padding-top: 5px;
   width: 30px;
-  vertical-align: top;
   z-index: 899;
   margin-left: auto;
   margin-right: auto;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  margin-top: -25px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   background: #dbb69d;
 }
 #menuButton {
@@ -415,7 +420,6 @@ body.active #menu {
   background: #dbb69d;
 }
 #menuButton div {
-  display: fixed;
   height: 25px;
   text-align: center;
   width: 30px;
