--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -304,7 +304,7 @@ float: left;
     position: fixed;
     float: left;
     min-height: 20%;
-    height: 80%;
+    height: 85%;
     top: 12%;
     padding-top: 1%;
     max-width: 22%;
@@ -399,24 +399,26 @@ float: left;
     font-size: 0.5em;
     float: right;
     width:10px;
+    vertical-align: middle;
     left: 22%;
     top: 78px;
     z-index: 890;
-    padding-top: 25%;
     position: fixed;
-    height: 33%;
+    height: 100%;
     background: @alternative;
-
-        div {
+    padding-top: 19%;  
+    div {
         display: inline-block;   
+        position: fixed;
         height: 25px;
         text-align: center;
+        vertical-align: middle;
         width: 30px;
         z-index: 899;
         margin-top: auto;
         margin-bottom: auto;
-         padding-top: 50%;  
-            border-top-left-radius: 0px;
+        padding-top: 11px;  
+        border-top-left-radius: 0px;
         border-top-right-radius: 5px;
         border-bottom-left-radius: 0px;
         border-bottom-right-radius: 5px;
@@ -428,26 +430,28 @@ float: left;
 #impressumButton {
     cursor: pointer;
     font-size: 0.5em;
-    bottom: 2.5%;
+    bottom: 3%;
     height: 5px;
+    text-align: center;
     z-index: 997;
     position: fixed;
     padding-left: 45%;
     width: 100%;
     background-color: #DBB69D;
-        div {
-        display: inline-block;   
+    div { 
+        position: inherit;
         height: 25px;
         text-align: center;
+        padding-top:5px;
         width: 30px;
-            vertical-align:top;
         z-index: 899;
-            margin-left: auto;
-    margin-right: auto;
-            border-top-left-radius: 0px;
-        border-top-right-radius: 0px;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -25px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
         background: @alternative;
 
         
@@ -464,20 +468,17 @@ float: left;
     text-align: center;
     background-color: transparent;
     margin-bottom: 20px;
-
     height: 2px;
-   background: @alternative;
-    
+    background: @alternative;
     div {
-        display: fixed;   
         height: 25px;
         text-align: center;
         width: 30px;
         z-index: 899;
         bottom: 22px;
-            margin-left: auto;
-    margin-right: auto;
-            border-top-left-radius: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        border-top-left-radius: 0px;
         border-top-right-radius: 0px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
