--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -90,9 +90,8 @@ a:hover {
 }
 
 .current_page_item {
-    font-color: red;
-    background: yellow;
-    border-color: blue;
+    color: red;
+    background: @alternative;
 }
 
 header {
@@ -254,11 +253,12 @@ body.active #menu {
     width: 50%;
     height: 50%;
 }
-#showContent img {
+#showContent a >  img {
     border: 2px solid;
     border-radius: 30px;
     border-color: transparent;
-    max-width: 100%;
+    max-width: 50%;
+    padding: 0;
 }
 .submenu {
     position: absolute;
@@ -322,19 +322,25 @@ float: left;
 }
 #toc {
     z-index: 911;
-    margin-left: 3%;
-    padding-right: 3%;
+    padding-left: 5px;
     height: auto;
     max-height: 85%;
     overflow-y: auto;
     overflow-x: auto;
     background-color: @lightblue;
 }
+
+#toc > ul {
+    padding-left: 10px;
+}
+
 #toc ul li a {
     width: auto;
     max-width: 10%;
     line-height: 1.5;
+    white-space: nowrap;
 }
+
 #toc ul li a:hover {
     color: #FDEEF4;
 }
